Add build profile to support JDK >= 11. In JDK 9, some APIs got declared as deprecated, including javax.xml.bind. From version 11 onwards, these APIs got removed from the JDK. Utilization requires an explicit dependency declaration.